--- a/styles/style.css
+++ b/styles/style.css
@@ -114,11 +114,10 @@ body {
 }
 .header__holder .header__info form input[type=text] {
   width: 100%;
-  padding: 20px 36px;
+  padding: 18px 36px;
   margin: 48px 0;
   box-sizing: border-box;
-}
-.header__holder .header__info form input[type=text]::placeholder {
+  outline: none;
   font: "Josefin Sans", sans-serif;
   font-size: 14px;
   line-height: 20px;
