--- a/styles/_section5.scss
+++ b/styles/_section5.scss
@@ -14,8 +14,9 @@
     }
     .section-5__cart {
       display: flex;
-      height: 308px;
       .section-5__details {
+        flex: auto;
+        align-self: stretch;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -39,13 +40,28 @@
           }
         }
       }
+      .section-5__img {
+        min-width: 380px;
+        align-self: stretch;
+        img {
+          display: block;
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
+          object-position: top;
+        }
+      }
     }
   }
 
   @media screen and (max-width: 1359px) {
     background: url("../images/section5-background-medium.jpg")  top center / 100% 100% no-repeat;
-    .section-5__cart {
-      height: 336px;
+    .section-5__holder {
+      .section-5__cart {
+        .section-5__img {
+          min-width: 320px;
+        }
+      }
     }
 
   }
@@ -55,9 +71,6 @@
     .section-5__cart {
       flex-direction: column;
       height: auto;
-      img {
-        width: 100%
-      }
       .section-5__details {
         padding: 48px 60px;
       }
@@ -68,4 +81,4 @@
     background: url("../images/section5-background-extra-small.jpg")  top center / 100% 100% no-repeat;
   }
 
-  }
+}
