--- a/styles/_why.scss
+++ b/styles/_why.scss
@@ -35,11 +35,29 @@
           position: absolute;
           top: 124px;
           left: 24px;
+          height: 220px;
+          width: 350px;
+          img {
+            display: block;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            object-position: top;
+          }
         }
         .why__foto--second {
           position: absolute;
           top: 360px;
           right: 0;
+          height: 220px;
+          width: 350px;
+          img {
+            display: block;
+            object-fit: cover;
+            width: 100%;
+            height: 100%;
+            object-position: top;
+          }
         }
       }
     }
@@ -76,9 +94,13 @@
           gap: 24px;
           .why__foto--first{
             position: static;
+            width: 349px;
+            height: 219px;
           }
           .why__foto--second{
             position: static;
+            width: 348px;
+            height: 219px;
           }
         }
       }
@@ -87,18 +109,29 @@
   }
   @media screen and (max-width: 767px) {
     background: url("../images/why-background-extra-small.jpg") top center / 100% 100% no-repeat;
-    height: 630px;
-    .why__foto--first {
-      position: absolute;
-      top: 124px;
-      left: 24px;
+    //height: 630px;
+    .container {
+      .why__holder {
+        .why__foto {
+          .why__foto--first {
+            //position: absolute;
+            //top: 124px;
+            //left: 24px;
+            width: 258px;
+            height: 162px;
+          }
+          .why__foto--second {
+            //position: absolute;
+            //top: 360px;
+            //right: 0;
+            width: 258px;
+            height: 162px;
+          }
+        }
+      }
 
     }
-    .why__foto--second {
-      position: absolute;
-      top: 360px;
-      right: 0;
 
-    }
+
   }
 }
