--- a/styles/style.css
+++ b/styles/style.css
@@ -442,11 +442,29 @@ body {
   position: absolute;
   top: 124px;
   left: 24px;
+  height: 220px;
+  width: 350px;
+}
+.why .container .why__holder .why__foto .why__foto--first img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-position: top;
 }
 .why .container .why__holder .why__foto .why__foto--second {
   position: absolute;
   top: 360px;
   right: 0;
+  height: 220px;
+  width: 350px;
+}
+.why .container .why__holder .why__foto .why__foto--second img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-position: top;
 }
 @media screen and (max-width: 1359px) {
   .why {
@@ -481,25 +499,26 @@ body {
   }
   .why .container .why__holder .why__foto .why__foto--first {
     position: static;
+    width: 349px;
+    height: 219px;
   }
   .why .container .why__holder .why__foto .why__foto--second {
     position: static;
+    width: 348px;
+    height: 219px;
   }
 }
 @media screen and (max-width: 767px) {
   .why {
     background: url("../images/why-background-extra-small.jpg") top center/100% 100% no-repeat;
-    height: 630px;
   }
-  .why .why__foto--first {
-    position: absolute;
-    top: 124px;
-    left: 24px;
+  .why .container .why__holder .why__foto .why__foto--first {
+    width: 258px;
+    height: 162px;
   }
-  .why .why__foto--second {
-    position: absolute;
-    top: 360px;
-    right: 0;
+  .why .container .why__holder .why__foto .why__foto--second {
+    width: 258px;
+    height: 162px;
   }
 }
 
@@ -744,9 +763,10 @@ body {
 }
 .section-5__holder .section-5__cart {
   display: flex;
-  height: 308px;
 }
 .section-5__holder .section-5__cart .section-5__details {
+  flex: auto;
+  align-self: stretch;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -770,12 +790,23 @@ body {
 .section-5__holder .section-5__cart .section-5__details .section-5__cart--text svg {
   fill: #5373FD;
 }
+.section-5__holder .section-5__cart .section-5__img {
+  min-width: 380px;
+  align-self: stretch;
+}
+.section-5__holder .section-5__cart .section-5__img img {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-position: top;
+}
 @media screen and (max-width: 1359px) {
   .section-5 {
     background: url("../images/section5-background-medium.jpg") top center/100% 100% no-repeat;
   }
-  .section-5 .section-5__cart {
-    height: 336px;
+  .section-5 .section-5__holder .section-5__cart .section-5__img {
+    min-width: 320px;
   }
 }
 @media screen and (max-width: 1023px) {
@@ -786,9 +817,6 @@ body {
   .section-5 .section-5__cart {
     flex-direction: column;
     height: auto;
-  }
-  .section-5 .section-5__cart img {
-    width: 100%;
   }
   .section-5 .section-5__cart .section-5__details {
     padding: 48px 60px;
